# cargo-algorist

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: main.rs
src/cmd/: add_problem.rs  bundle_problem.rs  create.rs  create_contest.rs  mod.rs  run.rs
src/cmd/bundle/: context.rs  mod.rs  parsed_data.rs
src/cmd/bundle/phases/: complete_bundling.rs  expand_mods.rs  mod.rs  parse_binary.rs  traverse_crates.rs  utils.rs
tpl/: Cargo.toml.tpl  main.rs  problem.rs
